# productometer

./: .gitignore  README.md  config.h.in  config.h.in~  configure  configure.ac
sql/: schema.sql  view.sql
src/: Makefile.am  Makefile.in  md5.c  md5.h  productometer.c  productometer.conf.example  productometer.h
